--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -13,10 +13,12 @@ import NvimIcon from "../assets/nvim.svg";
         Hi, I'm Josiah.<span class="animate-blink text-primary">|</span>
       </h1>
       <p class="text-xl text-muted max-w-2xl mt-4 mb-8">
-        I'm a Fullstack Engineer working at Capital One. As a hobby, I build
-        Terminal UIs along with Neovim plugins.
+        A Fullstack Engineer with 5 years of experience, currently working at
+        Capital One. As a hobby, I build Terminal UIs along with Neovim plugins.
       </p>
       <div class="flex gap-4 mt-2">
+        <a class="text-primary" href="#experience"> Experience </a>
+        <a class="text-primary" href="#projects"> Projects </a>
         <a
           href="https://www.github.com/vertexE"
           target="_blank"
