--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,11 +7,11 @@
 
     <meta
       property="og:image"
-      content="https://vertexe.github.io/site/images/thumbnail.png"
+      content="https://vertexe.github.io/site/thumbnail.png"
     />
     <meta
       name="twitter:image"
-      content="https://vertexe.github.io/site/images/thumbnail.png"
+      content="https://vertexe.github.io/site/thumbnail.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
