chore: add border-alert on hover for project previews

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -17,13 +17,16 @@ import ColorSwatchIcon from "../assets/color-swatch.svg";
 
     <ul class="max-w-4xl space-y-16">
       <li class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-8 items-start">
-        <div
-          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted"
+        <a
+          href="https://github.com/vertexE/fifoplayer"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted hover:border-alert"
         >
           <SpotifyIcon class="w-10 h-10 inline" />
           <ArrowsDiffIcon class="w-8 h-6 inline" />
           <TerminalIcon class="w-10 h-10 inline" />
-        </div>
+        </a>
         <div>
           <div class="flex gap-4">
             <h3 class="font-plex text-xl text-muted font-light mb-2">
@@ -51,11 +54,14 @@ import ColorSwatchIcon from "../assets/color-swatch.svg";
       </li>
 
       <li class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-8 items-start">
-        <div
-          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted"
+        <a
+          href="https://github.com/vertexE/multibuffer.nvim"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted hover:border-alert"
         >
           <StackIcon class="w-18 h-18" />
-        </div>
+        </a>
         <div>
           <div class="flex gap-4">
             <h3 class="font-plex text-xl text-muted font-light mb-2">
@@ -82,11 +88,14 @@ import ColorSwatchIcon from "../assets/color-swatch.svg";
       </li>
 
       <li class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-8 items-start">
-        <div
-          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted"
+        <a
+          href="https://github.com/vertexE/fold.nvim"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted hover:border-alert"
         >
           <FoldIcon class="w-18 h-18" />
-        </div>
+        </a>
         <div>
           <div class="flex gap-4">
             <h3 class="font-plex text-xl text-muted font-light mb-2">
@@ -112,11 +121,14 @@ import ColorSwatchIcon from "../assets/color-swatch.svg";
       </li>
 
       <li class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-8 items-start">
-        <div
-          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted"
+        <a
+          href="https://github.com/vertexE/type-hero"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted hover:border-alert"
         >
           <KeyboardIcon class="w-18 h-18" />
-        </div>
+        </a>
         <div>
           <div class="flex gap-4">
             <h3 class="font-plex text-xl text-muted font-light mb-2">
@@ -147,11 +159,14 @@ import ColorSwatchIcon from "../assets/color-swatch.svg";
       </li>
 
       <li class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-8 items-start">
-        <div
-          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted"
+        <a
+          href="https://github.com/vertexE/synth.nvim"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full h-44 bg-card-bg border-2 border-dashed border-muted rounded flex items-center justify-center font-plex text-muted hover:border-alert"
         >
           <ColorSwatchIcon class="w-18 h-18" />
-        </div>
+        </a>
         <div>
           <div class="flex gap-4">
             <h3 class="font-plex text-xl text-muted font-light mb-2">
