chore: font-plex on anchor links

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -17,8 +17,8 @@ import NvimIcon from "../assets/nvim.svg";
         Capital One. As a hobby, I build Terminal UIs along with Neovim plugins.
       </p>
       <div class="flex gap-4 mt-2">
-        <a class="text-primary" href="#experience"> Experience </a>
-        <a class="text-primary" href="#projects"> Projects </a>
+        <a class="text-primary font-plex" href="#experience"> Experience </a>
+        <a class="text-primary font-plex" href="#projects"> Projects </a>
         <a
           href="https://www.github.com/vertexE"
           target="_blank"
