--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Josiah's personal portfolio showcasing both projects and experience along with a blog."
+    />
     <title>Josiah</title>
 
     <meta
@@ -13,6 +17,7 @@
       name="twitter:image"
       content="https://vertexe.github.io/site/thumbnail.png"
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
