--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,26 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'IBM Plex Mono';
+  src: url('/site/fonts/IBMPlexMono-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  src: url('/site/fonts/IBMPlexMono-Medium.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono';
+  src: url('/site/fonts/IBMPlexMono-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: bold;
+}
+
 @theme {
   --color-dark: #0e1219;
   --color-primary: #13eb95;
