--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -76,7 +76,7 @@
           Associate Software Engineer - Agent Servicing
         </h3>
         <span class="block font-plex text-sm text-primary mb-4"
-          >Capital One // 2024 - Present</span
+          >Capital One // 2021 - 2022</span
         >
         <ul class="list-disc pl-5 space-y-2 text-muted">
           <li>
